among other things: fixed bundle adjustment bugs, threaded ba, use calibrated cam, sanity checks after triangulation, etc

--- a/.hgignore
+++ b/.hgignore
@@ -1,8 +1,12 @@
+syntax:regex
+^[^/]*\.txt$
+
 syntax:glob
 
 # custom own stuff
 arducam/
-
+data/
+*.out
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
